Activity and State button aligned correctly now

--- a/src/pages/HomePage/homepage.css
+++ b/src/pages/HomePage/homepage.css
@@ -36,8 +36,8 @@
   font-family: 'Lato';
   font-size: 150%; /* increased font size */
   font-weight: 500; /* bold font weight */
-padding-left: 8rem;
-padding-right: 2rem;
+padding-left: 10rem;
+padding-right: 10rem;
 padding-top: 2rem;   
 padding-bottom: 2rem;   
 
